Criando Crud de Categoria Socio; Criando Cadatro de Socio; Cirando Temaplete padrão; Gerando css para stylo da aplicação; Criando JavaScript para o cadastro de socio; Criando Arquivos de mensagens para internazionalização da aplicação; Criando Script de criação do banco; Criando Script de povoamento do banco; Adicionando tema twitter bootstrap à aplicação;

--- a/src/main/webapp/usuario/PaginaInicial.xhtml
+++ b/src/main/webapp/usuario/PaginaInicial.xhtml
@@ -6,19 +6,22 @@
 
     <ui:decorate template="/template/TemaPadrao.xhtml">
         <ui:define name="title">
-            Cadastro
+            <h1>Bem vindo</h1>
         </ui:define>
         <ui:define name="javascripts">
-            <script src="#{request.contextPath}/template/js/jquery.mask.js"/>
-            <script src="#{request.contextPath}/template/js/fuction.form.socio.js"/>
+
         </ui:define>
         <ui:define name="stylesheets">
 
         </ui:define>
         <ui:define name="body">
-            <h:form id="formCadastroSocio" class="form-actions">
-                <ui:include src="/usuario/socio/FormularioPrincipal.xhtml"/>
-            </h:form>
+            <!-- Jumbotron -->
+            <div class="jumbotron">
+                <p class="lead">Descrição do projeto</p>
+            </div>
+
+            <hr/>
+            
         </ui:define>
     </ui:decorate>
 </html>
